<resources>
    <string name="app_name">Good Lock</string>
    <string name="Use_Teach">User Guide</string>
    <string name="linkPC"> Login on PC</string>
    <string name="Qlogin">Quick Login</string>
    <string name="Set">Settings</string>
    <string name="about_us">About us</string>
    <string name="Continue">Next</string>
    <string name="Back">Back</string>
    <string name="description">Explain：</string>
    <string name="description4">the key will be use to generate unique password (you can change key anytime)</string>
    <string name="description5">After changing your key,please reset your password in every website.</string>
    <string name="hint">Enter your Key:</string>
    <string name="confirm">OK</string>
    <string name="hint2">(8 character. use English, numbers or special characters)</string>
    <string name="floatView">Floating Window</string>
    <string name="doubleCheck">Dual Verification</string>
    <string name="specialCharacters">Special Characters</string>
    <string name="continueCharacters">Continuous Characters(number)</string>
    <string name="capitalCharacters">Capital Letter</string>
    <string name="numbersOnly">Only numbers</string>
    <string name="changeKey">Change your Key</string>
    <!--快速登入與小白點登入-->
    <string name="title_activity_normal_login_test">NormalLoginTest</string>
    <string name="input_ur_idnurl">Enter your Custom Name and ID:</string>
    <string name="ok">OK</string>
    <string name="FloatHint">When you first open the floating window,it will ask you to check permission,please check the permission to use floating window normally</string>
    <string name="cancel">Cancel</string>
    <!--快速登入與小白點登入-->
    <!--normal_login_test_login-->
    <string name="normal_login_test_login_1">Enter your Custom Name, EX.Facebook</string>
    <string name="normal_login_test_login_2">Enter your ID</string>
    <string name="normal_login_test_login_3">Settings</string>
    <string name="normal_login_test_login_4">Enter URL</string>
    <!--normal_login_test_login-->
    <!--Login JAVA-->
    <string name="success">Your password has generated</string>
    <string name="link_error">Please check your URL</string>
    <!--Login JAVA-->
    <!--normal_login_JAVA-->
    <string name="add">Add : </string>
    <string name="change">Edit : </string>
    <string name="delete">Delete : </string>
    <string name="input">Please finish setting your name and ID</string>
    <string name="input_notice">Please do not enter ","</string>
    <string name="input_notice2">Please do not let two rows be “empty”</string>
    <string name="change_data">Edit your information</string>
    <string name="password_set">Settings</string>
    <string name="password_set2">Please finish your password setting!</string>
    <!--normal_login_JAVA-->
    <!--changekey_JAVA-->
    <string name="key_fail">Failed to read key</string>
    <string name="change_success">Change successful : </string>
    <string name="change_fail">Edit failed,please enter any characters the length is 8</string>
    <!--changekey_JAVA-->
    <!--menu_normal_login_test_login-->
    <string name="EditChinese">Edit</string>
    <string name="DeleteChinese">Delete</string>
    <!--menu_normal_login_test_login-->
    <!--normal_login_setting-->
    <string name="normal_login_setting_1">The Rules of Password Generator：</string>
    <string name="normal_login_setting_2">Special characters(Default)</string>
    <string name="normal_login_setting_3"> Default: @ # $ % ^ &amp; * _ + = - ? ~ ! </string>
    <string name="normal_login_setting_4">Continuous letter(Figure)</string>
    <string name="normal_login_setting_5">Capital letters</string>
    <string name="normal_login_setting_6">Only numbers</string>
    <string name="normal_login_setting_7">Password length </string>
    <string name="normal_login_setting_8">English as first character</string>
    <string name="normal_login_setting_9"> Figures as first character </string>
    <string name="normal_login_setting_10">Special Characters(Custom)</string>
    <string name="normal_login_setting_11">Custom Characters</string>
    <string name="way1">First way:</string>
    <string name="way2">Second way:</string>
    <string name="Chrome">Use “Chrome Remote Desktop”</string>
    <string name="way1Ex"> Please go to “Chrome Online App Store”, install it and follow its steps.</string>
    <string name="Manual">Manual Input</string>
    <string name="way2Ex"> Please use the quick login or floating window to enter your password into the visible text (such as memo), and then manually enter the generated password into the computer. Be careful to prevent social engineering when using this way. </string>
    <string name="specila_words_set_themselves_1"> Select the special characters you do not want: </string>
    <string name="SetHint"> Dual verification will take effect the next time you start Good Lock. </string>
    <string name="no_fingerprint_enrolled_dialog_message">Please go to “Settings” to set your fingerprint.</string>
    <string name="cancel_btn_dialog">Settings</string>
    <string name="no_fingersystem">Sorry,your phone does not support fingerprint </string>
    <string name="UsingTouchID">Use Touch ID in「Good Lock」</string>
    <string name="confirm_success">Verify succeed</string>
    <string name="confirm_fail">Verify failed</string>
    <string name="float_confirm_success">Verify succeed,please click the floating window again</string>
    <string name="float_confirm_fail">Verify failed,please click the floating window again</string>
    <string name="try_again">Try Again</string>
    <string name="confirm_fingerprint">Verify your Fingerprint</string>
    <string name="appTerms">Terms</string>
    <string name="plz">Please check “Agree” to continue</string>
    <string name="terms">
        APP Privacy Policy
        \nThis page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.
        \n\nBy using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.
        \n\n1.Information Collection And Use \n\nWe collect several different types of information for various purposes to provide and improve our Service to you.
        \nTypes of Data Collected:\n\nPersonal Data\nWhile using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:
        \n●Usage Data
        \n\nUsage Data\nWhen you access the Service with a mobile device, we may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile device IMEI code, the Fingerprint of your mobile device.
        \n\n2.Use of Data
        \nGood Lock uses the collected data for various purposes:
        \n●To provide and maintain the Service
        \n●To provide customer care and support
        \n●To provide analysis or valuable information so that we can improve the Service
        \n●To monitor the usage of the Service
        \n●To detect, prevent and address technical issues
        \n\n3.Legal Requirements
        \nGood Lock may disclose your Personal Data in the good faith belief that such action is necessary to:
        \n●To comply with a legal obligation
        \n●To protect and defend the rights or property of Good Lock
        \n●To prevent or investigate possible wrongdoing in connection with the Service
        \n●To protect the personal safety of users of the Service or the public
        \n●To protect against legal liability
        \n\n4.Security Of Data
        \nThe security of your data is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.
        \n\n5.Service Providers
        \nWe may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.
        \nThese third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.
        \n\n6.Links To Other Sites
        \nOur Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that site third party. We strongly advise you to review the Privacy Policy of every site you visit.
        \nWe have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.
        \n\n7.Changes To This Privacy Policy
        \nWe may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
        \n\nContact Us
        \nIf you have any questions about this Privacy Policy, please contact us:
        \n goodlockpwd@gmail.com
    </string>
    <string name="agree"> I have read and agree the terms above</string>
    <!--浮動視窗偵錯-->
    <string name="drawtwopoints">Sorry! Please connect at least two points</string>
    <!--浮動視窗偵錯-->
    <string name="Login">Login</string>
    <string name="Normal">Normal</string>
</resources>
