<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_set"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/Layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_ur_idnurl"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/normal_login_test_login_1"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/normal_login_test_login_2"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/normal_login_test_login_4"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout"
        android:orientation="vertical">

        <Button
            android:id="@+id/pswSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttonstyle_set"
            android:text="@string/normal_login_test_login_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>