<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorType"
    tools:context=".ChangeKey">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FDFBFB"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="120dp"
            android:paddingEnd="120dp">

            <TextView
                android:id="@+id/FirstHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="186dp" />

            <EditText
                android:id="@+id/cKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="8"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="99dp"
                tools:layout_editor_absoluteY="232dp" />

            <TextView
                android:id="@+id/textFirstHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hint2" />

            <Button
                android:id="@+id/Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle"
                android:text="@string/confirm"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="317dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="#BF000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="408dp" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description4"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="457dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>